[package]
name = "sold-issuance"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sold_issuance"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = { version = "0.29.0", features = ["metadata"] }
solana-program = "=1.17.0"
pyth-solana-receiver-sdk ="0.1.0"
bytemuck = { version = "1.7", features = ["derive"] }
jet-proc-macros = { version = "1", package = "jet-proto-proc-macros" }
static_assertions = "1.1.0"
uint = "=0.9.1"
toml_edit = "=0.21.0"
ahash = "=0.7.8"

[dev-dependencies]
solana-sdk = "1.17.0"
solana-program-test = "1.17.0"
getrandom = { version = "0.1.16", features=["dummy"]}
